fix responsive navigation & mobile screen viewport overflow

--- a/sass/navigation/_custom-header.scss
+++ b/sass/navigation/_custom-header.scss
@@ -50,6 +50,26 @@ header {
   background-color: var(--white);
   padding: 0 2.3rem;
   overflow: hidden;
+
+  div#navbar-toggle {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  @media only screen and (max-width: 414px) {
+    padding: 20px 0.6rem;
+
+    img {
+      width: 90%;
+    }
+
+    div#navbar-toggle {
+      display: block;
+      visibility: visible;
+      opacity: 1;
+    }
+  }
 }
 
 .middle-links {
@@ -71,6 +91,10 @@ header {
   li:hover > a {
     color: $white;
     background-color: $oa-dark-blue;
+  }
+
+  @media only screen and (max-width: 414px) {
+    display: none;
   }
 }
 
@@ -155,6 +179,17 @@ ul li ul li > a:only-child:after {
   background-color: $oa-pink;
   height: 60px;
   overflow: hidden;
+
+  @media only screen and (max-width: 414px) {
+    white-space: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
+  }
 }
 
 .bottom-links {
@@ -178,6 +213,10 @@ ul li ul li > a:only-child:after {
 
   li:hover > a {
     background-color: $oa-pink-dark;
+  }
+
+  @media only screen and (max-width: 414px) {
+    padding: 0;
   }
 }
 
@@ -214,6 +253,17 @@ ul li ul li > a:only-child:after {
   visibility: visible;
   opacity: 1;
   display: block;
+
+  @media only screen and (max-width: 414px) {
+    visibility: hidden;
+    opacity: 0;
+    display: none;
+  }
+}
+
+i.fas.fa-bars {
+  font-size: 24px;
+  color: #154299;
 }
 
 i.fa.fa-ticket-alt {
@@ -224,6 +274,12 @@ i.fa.fa-angle-down {
   display: flex;
   align-items: flex-end;
   margin-left: 0.4rem;
+
+  @media only screen and (max-width: 414px) {
+    visibility: hidden;
+    opacity: 0;
+    display: none;
+  }
 }
 
 .buy-tickets {
@@ -234,7 +290,7 @@ i.fa.fa-angle-down {
   color: #fff;
   width: 160px;
   position: relative;
-  padding-left: 2.3rem;
+  padding-left: 2rem;
   font-size: 1.375rem;
   font-weight: 300;
   text-transform: uppercase;
@@ -243,6 +299,29 @@ i.fa.fa-angle-down {
 
   > p {
     margin: 0;
+  }
+
+  > i.fas.fa-tags {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  @media only screen and (max-width: 414px) {
+    display: block;
+    padding: 12px 10px;
+    text-align: center;
+
+    > p {
+      font-size: 12px;
+    }
+
+    > i.fas.fa-tags {
+      display: block;
+      visibility: visible;
+      opacity: 1;
+      text-align: center;
+    }
   }
 }
 
@@ -261,4 +340,10 @@ i.fa.fa-angle-down {
   transform: rotate(45deg);
   border-top: 1px solid #fff;
   border-right: 1px solid #fff;
+
+  @media only screen and (max-width: 414px) {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+  }
 }
