--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -21,6 +21,7 @@
 
   @media only screen and (max-width: 414px) {
     margin: 2.3rem 0.625rem;
+    overflow: hidden;
   }
 }
 
