--- a/style.css
+++ b/style.css
@@ -625,6 +625,26 @@ header {
 	overflow: hidden;
 }
 
+.navbar-middle div#navbar-toggle {
+	display: none;
+	visibility: hidden;
+	opacity: 0;
+}
+
+@media only screen and (max-width: 414px) {
+	.navbar-middle {
+		padding: 20px 0.6rem;
+	}
+	.navbar-middle img {
+		width: 90%;
+	}
+	.navbar-middle div#navbar-toggle {
+		display: block;
+		visibility: visible;
+		opacity: 1;
+	}
+}
+
 .middle-links {
 	display: flex;
 	justify-content: space-between;
@@ -645,6 +665,12 @@ header {
 .middle-links li:hover > a {
 	color: #fff;
 	background-color: #0874cc;
+}
+
+@media only screen and (max-width: 414px) {
+	.middle-links {
+		display: none;
+	}
 }
 
 .middle-links ul {
@@ -737,6 +763,18 @@ ul li ul li > a:only-child:after {
 	overflow: hidden;
 }
 
+@media only screen and (max-width: 414px) {
+	.navbar-bottom {
+		white-space: nowrap;
+		overflow-x: auto;
+		-webkit-overflow-scrolling: touch;
+		-ms-overflow-style: -ms-autohiding-scrollbar;
+	}
+	.navbar-bottom ::-webkit-scrollbar {
+		display: none;
+	}
+}
+
 .bottom-links {
 	display: flex;
 	justify-content: space-around;
@@ -759,6 +797,12 @@ ul li ul li > a:only-child:after {
 
 .bottom-links li:hover > a {
 	background-color: #d01b99;
+}
+
+@media only screen and (max-width: 414px) {
+	.bottom-links {
+		padding: 0;
+	}
 }
 
 .bottom-links ul {
@@ -803,6 +847,19 @@ ul li ul li > a:only-child:after {
 	display: block;
 }
 
+@media only screen and (max-width: 414px) {
+	.bottom-links li:hover > ul {
+		visibility: hidden;
+		opacity: 0;
+		display: none;
+	}
+}
+
+i.fas.fa-bars {
+	font-size: 24px;
+	color: #154299;
+}
+
 i.fa.fa-ticket-alt {
 	padding-right: 0.3rem;
 }
@@ -813,6 +870,14 @@ i.fa.fa-angle-down {
 	margin-left: 0.4rem;
 }
 
+@media only screen and (max-width: 414px) {
+	i.fa.fa-angle-down {
+		visibility: hidden;
+		opacity: 0;
+		display: none;
+	}
+}
+
 .buy-tickets {
 	display: flex;
 	justify-content: flex-end;
@@ -821,7 +886,7 @@ i.fa.fa-angle-down {
 	color: #fff;
 	width: 160px;
 	position: relative;
-	padding-left: 2.3rem;
+	padding-left: 2rem;
 	font-size: 1.375rem;
 	font-weight: 300;
 	text-transform: uppercase;
@@ -831,6 +896,29 @@ i.fa.fa-angle-down {
 
 .buy-tickets > p {
 	margin: 0;
+}
+
+.buy-tickets > i.fas.fa-tags {
+	display: none;
+	visibility: hidden;
+	opacity: 0;
+}
+
+@media only screen and (max-width: 414px) {
+	.buy-tickets {
+		display: block;
+		padding: 12px 10px;
+		text-align: center;
+	}
+	.buy-tickets > p {
+		font-size: 12px;
+	}
+	.buy-tickets > i.fas.fa-tags {
+		display: block;
+		visibility: visible;
+		opacity: 1;
+		text-align: center;
+	}
 }
 
 .buy-tickets:hover {
@@ -848,6 +936,14 @@ i.fa.fa-angle-down {
 	transform: rotate(45deg);
 	border-top: 1px solid #fff;
 	border-right: 1px solid #fff;
+}
+
+@media only screen and (max-width: 414px) {
+	.buy-tickets:before {
+		display: none;
+		visibility: hidden;
+		opacity: 0;
+	}
 }
 
 /*--------------------------------------------------------------
@@ -1208,6 +1304,7 @@ a > span.fa {
 @media only screen and (max-width: 414px) {
 	.content-body {
 		margin: 2.3rem 0.625rem;
+		overflow: hidden;
 	}
 }
 
